<resources>
    <string name="app_name">It Inventory</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit">Edit</string>
    <string name="action_move">Move</string>

    <string name="message_delete_office">Do you really want to delete this office ?</string>
    <string name="message_delete_workstation">Do you really want to delete this workstation ?</string>

    <string name="workstation_screens">Screens :</string>
    <string name="workstation_portable">Portable :</string>
    <string name="workstaion_os">OS :</string>
    <string name="workstation_ram">RAM :</string>
    <string name="workstaion_storage">Storage :</string>
    <string name="workstation_processor">Processor :</string>
    <string name="workstation_keyboard">Keyboard :</string>

    <string name="workstation_hint_os">OS</string>
    <string name="workstation_hint_ram">RAM</string>
    <string name="workstation_hint_storage">Storage</string>
    <string name="workstation_hint_processor">Processor</string>

    <string name="officeName">Name : </string>
    <string name="officeFloor">Floor : </string>
    <string name="officeSector">Sector : </string>
    <string name="officeCity">City : </string>
    <string name="officeCountry">Country : </string>

    <string name="officeNameHint">Name</string>
    <string name="officeFloorHint">Floor</string>
    <string name="officeSectorHint">Sector</string>
    <string name="officeCityHint">City</string>
    <string name="officeCountryHint">Country</string>

    <string name="action_create_office">Create Office</string>
    <string name="title_office_details">Office Details</string>
    <string name="title_office_create">Create Office</string>
    <string name="action_edited_office">Office Edited</string>
    <string name="action_create_workstation">Create Workstation</string>
    <string name="action_edited_workstation">Workstation Edited</string>
    <string name="action_error_office">Office not edited</string>
    <string name="action_error_workstation">Workstation not edited</string>

    <string name="workstation_error_os">"OS field can't be empty"</string>
    <string name="workstation_error_rem">"RAM field can't be empty"</string>
    <string name="workstation_error_storage">"Storage field can't be empty"</string>
    <string name="workstation_error_processor">"Processor field can't be empty</string>

    <string name="office_error_name">"Name field can't be empty"</string>
    <string name="office_error_floor">"Floor field can't be empty"</string>
    <string name="office_error_sector">"Sector field can't be empty</string>
    <string name="office_error_city">"City field can't be empty</string>
    <string name="office_error_country">"Country field can't be empty</string>

    <string name="kb_prompt">Keyboard language</string>
    <string-array name="keyboard_array">
        <item>QWERTZ</item>
        <item>QWERTY</item>
        <item>AZERTY</item>
        <item>Dvorak</item>
        <item>Colemak</item>
    </string-array>

    <string name="officeimage">OfficeImage</string>

</resources>
